Resolves: tdf#106159 right click + left click with comments in navigator

results in a disposed submenu in the menu, we need to flag with bSubPop4
that we have inserted the submenu into the parent menu to not dispose
it

Change-Id: I5b9711c0bba750c11d64dc175efd452f4bc8f4e5
(cherry picked from commit 58659cbaa8c955b135737bf9d77e4e57813310e5)
Reviewed-on: https://gerrit.libreoffice.org/34590
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>